tests/NormalTests/paczka1/small_fuzzy/14480121.err
Error in line 9: hhCYvk A79 8,2
Error in line 11: hhCYvk S318 1,6
Error in line 13: rVjGberVG A391 54,3
